--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,38 +1,29 @@
-
 <div class="login-wrapper">
   <div class="login-container">
-    <h2>Login</h2>
-    <span>inserisci le credenziali</span>
+    <div class="logo-container">
+      <!-- Aggiungi qui il tuo logo -->
+      <img src="../../assets/logo.png">
+    </div>
+    <div class="title-container">
+      <h2 class="login-title">Rilievi e Perizie - Login Operatore</h2>
+    </div>
     <div class="form">
       <div class="form-group">
-        <label for="username">username:</label>
-        <div class="search">
-          <div class="search-group">
-            <ion-icon name="username"></ion-icon>
-            <input type="text" placeholder="username" [(ngModel)]="username">     
-          </div>
+        <label for="username" class="form-label">Username:</label>
+        <div class="input-group">
+          <ion-icon name="person-outline" class="input-icon"></ion-icon>
+          <input type="text" class="form-control" id="username" placeholder="Inserisci il tuo username" [(ngModel)]="this.servizigenerali.username" >     
         </div>
       </div>
       <div class="form-group">
-        <label for="password">Password:</label>
-        <div class="search">
-          <div class="search-group">
-            <ion-icon name="lock-closed-outline"></ion-icon>
-            <input type="text" placeholder="password" [(ngModel)]="password">    
-          </div>
+        <label for="password" class="form-label">Password:</label>
+        <div class="input-group">
+          <ion-icon name="lock-closed-outline" class="input-icon"></ion-icon>
+          <input type="password" class="form-control" id="password" placeholder="Inserisci la tua password" [(ngModel)]="this.servizigenerali.password">    
         </div>
       </div>
       <div class="row-button">
-        <button type="submit" (click)="accedi()">accedi</button>
-        <button type="button"> registrati</button>
-      </div>
-      <div class="row-button-google">
-        <button type="button" class="google-login">
-          <div class="google-image">
-            <img src="https://lh3.googleusercontent.com/COxitqgJr1sJnIDe8-jiKhxDx1FrYbtRHKJ9z_hELisAlapwE9LUPh6fcXIfb5vwpbMl4xl9H9TRFPc5NOO8Sb3VSgIBrfRYvW6cUA">
-          </div>
-          Login with Google
-        </button>
+        <button type="submit" class="btn btn-primary" (click)="accedi()">Accedi</button>
       </div>
     </div>
   </div>
