--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,13 +2,13 @@
 
   <ion-tab-bar slot="bottom" class="ion-tab-bar-large">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>PERIZIE</ion-label>
+      <ion-icon aria-hidden="true" name="folder"></ion-icon>
+      <ion-label>Le mie perizie</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon aria-hidden="true" name="camera"></ion-icon>
+      <ion-label>Carica perizie</ion-label>
     </ion-tab-button>
 
     <ion-tab-button (click)="logout()">
